nullaway_error_44B05132-0D98-40F3-9B61-B38845243CA3.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-beans/src/main/java/org/springframework/beans/factory/support/DefaultListableBeanFactory.java:1039: error: [NullAway] passing @Nullable parameter 'ex.getCause()' where @NonNull is required
				ReflectionUtils.rethrowRuntimeException(ex.getCause());
				                                                   ^
    (see http://t.uber.com/nullaway )
